--- a/package.json
+++ b/package.json
@@ -38,39 +38,39 @@
     "printWidth": 110
   },
   "dependencies": {
-    "@vitest/coverage-v8": "^0.34.1",
+    "@vitest/coverage-v8": "^4.0.5",
     "lodash-es": "^4.17.21",
-    "measuresuite": "^2.2.2",
+    "measuresuite": "file:/home/user/src/MeasureSuite",
     "proper-lockfile": "^4.1.2",
-    "simple-statistics": "^7.8.3",
-    "yargs": "^17.7.2"
+    "simple-statistics": "^7.8.8",
+    "yargs": "^18.0.0"
   },
   "devDependencies": {
-    "@rollup/plugin-strip": "^3.0.2",
-    "@rollup/plugin-terser": "^0.4.3",
-    "@rollup/plugin-typescript": "^11.1.2",
-    "@types/fs-extra": "^11.0.1",
-    "@types/lodash-es": "^4.17.8",
-    "@types/node": "^20.6.0",
-    "@types/proper-lockfile": "^4.1.2",
-    "@types/yargs": "^17.0.24",
-    "@typescript-eslint/eslint-plugin": "^6.7.0",
-    "@typescript-eslint/parser": "^6.7.0",
-    "c8": "^8.0.1",
-    "eslint": "^8.49.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-import": "^2.28.0",
-    "eslint-plugin-prettier": "^5.0.0",
-    "eslint-plugin-simple-import-sort": "^10.0.0",
-    "prettier": "^3.0.1",
-    "rollup": "^3.29.1",
+    "@rollup/plugin-strip": "^3.0.4",
+    "@rollup/plugin-terser": "^0.4.4",
+    "@rollup/plugin-typescript": "^12.3.0",
+    "@types/fs-extra": "^11.0.4",
+    "@types/lodash-es": "^4.17.12",
+    "@types/node": "^24.9.2",
+    "@types/proper-lockfile": "^4.1.4",
+    "@types/yargs": "^17.0.34",
+    "@typescript-eslint/eslint-plugin": "^8.46.2",
+    "@typescript-eslint/parser": "^8.46.2",
+    "c8": "^10.1.3",
+    "eslint": "^9.38.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-prettier": "^5.5.4",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
+    "prettier": "^3.6.2",
+    "rollup": "^4.52.5",
     "rollup-plugin-copy": "^3.5.0",
     "rollup-plugin-shell": "^1.0.9",
-    "tslib": "^2.6.1",
-    "typescript": "^5.2.2",
-    "vite": "^4.4.9",
-    "vite-tsconfig-paths": "^4.2.0",
-    "vitest": "^0.34.1"
+    "tslib": "^2.8.1",
+    "typescript": "^5.9.3",
+    "vite": "^7.1.12",
+    "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "^4.0.5"
   },
   "eslintConfig": {
     "root": true,
