--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,9 @@
     "outDir": "dist",
     "target": "ES2022",
     "module": "ES2022",
+    "lib": ["DOM", "ES2022", "ESNext"],
     "moduleResolution": "node",
+    // "ignoreDeprecations": "6.0",
     "strict": true,
     "esModuleInterop": true,
     "noImplicitAny": true,
