--- a/package.json
+++ b/package.json
@@ -40,15 +40,19 @@
   "dependencies": {
     "@vitest/coverage-v8": "^4.0.5",
     "lodash-es": "^4.17.21",
-    "measuresuite": "file:/home/user/src/MeasureSuite",
+    "measuresuite": "https://github.com/Toalaah/Measuresuite/tarball/cafa9558635d213f83e659ec77a6b793279caa2e",
     "proper-lockfile": "^4.1.2",
     "simple-statistics": "^7.8.8",
     "yargs": "^18.0.0"
+  },
+  "peerDependencies": {
+    "typescript": "^5"
   },
   "devDependencies": {
     "@rollup/plugin-strip": "^3.0.4",
     "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^12.3.0",
+    "@types/bun": "latest",
     "@types/fs-extra": "^11.0.4",
     "@types/lodash-es": "^4.17.12",
     "@types/node": "^24.9.2",
@@ -116,5 +120,8 @@
         }
       }
     ]
-  }
+  },
+  "trustedDependencies": [
+    "measuresuite"
+  ]
 }
