--- a/package.json
+++ b/package.json
@@ -55,11 +55,13 @@
     "@types/bun": "latest",
     "@types/fs-extra": "^11.0.4",
     "@types/lodash-es": "^4.17.12",
+    "@types/minimatch": "^6.0.0",
     "@types/node": "^24.9.2",
     "@types/proper-lockfile": "^4.1.4",
     "@types/yargs": "^17.0.34",
     "@typescript-eslint/eslint-plugin": "^8.46.2",
     "@typescript-eslint/parser": "^8.46.2",
+    "bun-plugin-strip": "^0.1.4",
     "c8": "^10.1.3",
     "eslint": "^9.38.0",
     "eslint-config-prettier": "^10.1.8",
