add more debug stats to output

--- a/.envrc
+++ b/.envrc
@@ -1,3 +1,6 @@
 export PATH=$PATH:$(pwd)
 fpath=($fpath $(pwd)/completion)
+if [ "$(sysctl kernel.perf_event_paranoid | cut -d ' ' -f3)" -ne 1 ]; then
+	echo -e "\033[1m\033[31mWARN: kernel.perf_event_paranoid not set to 1"
+fi
 # vim:ft=sh
